--- a/src/app/counter/counter.component.html
+++ b/src/app/counter/counter.component.html
@@ -1,5 +1,4 @@
-<div>{{ counterValue }}</div>
+<div>{{ startValue }}</div>
 
-<button (click)="handleIncrement()">Increase by {{ defaultStep }}</button>
-<button (click)="handleDecrement()">Decrease by {{ defaultStep }}</button>
-<button (click)="handleReset()">Reset</button>
+<button (click)="handleIncrease()">Increase by {{ changeValue }}</button>
+<button (click)="handleDecrease()">Decrease by {{ changeValue }}</button>
