--- a/src/app/counter/counter.component.html
+++ b/src/app/counter/counter.component.html
@@ -1,4 +1,4 @@
 <div>{{ startValue }}</div>
 
-<button (click)="handleIncrease()">Increase by {{ changeValue }}</button>
-<button (click)="handleDecrease()">Decrease by {{ changeValue }}</button>
+<button (click)="onIncrease()">Increase by {{ changeValue }}</button>
+<button (click)="onDecrease()">Decrease by {{ changeValue }}</button>
