Implementation of routing and attribute directive

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,1 @@
-<app-counter
-  *ngFor="let number of numbersArray; let i = index"
-  [startValue]="number"
-  (increase)="updateArray($event, i)"
-  (decrease)="updateArray($event, i)"
-></app-counter>
+<router-outlet></router-outlet>
