--- a/src/app/counters/counters.component.html
+++ b/src/app/counters/counters.component.html
@@ -1,6 +1,5 @@
 <app-counter
   *ngFor="let counter of countersArray; let i = index"
   [counterData]="counter"
-  (increase)="updateArray($event, i)"
-  (decrease)="updateArray($event, i)"
+  (counterAction)="updateArray($event, i)"
 ></app-counter>
